--- a/src/assets/i18n/en_US.json
+++ b/src/assets/i18n/en_US.json
@@ -262,11 +262,9 @@
   "account.profile.update_email.message": "Your e-mail address has been updated.",
   "account.profile.update_password.message": "Your password has been updated.",
   "account.profile.update_profile.message": "Your profile information has been updated.",
-  "account.quotes.widget.accepted.label": "Accepted",
   "account.quotes.widget.my_quotes.heading": "My Quotes",
-  "account.quotes.widget.new.label": "New",
-  "account.quotes.widget.rejected.label": "Rejected",
-  "account.quotes.widget.submitted.label": "Submitted",
+  "account.quotes.widget.responded.label": "Responded Quotes",
+  "account.quotes.widget.submitted.label": "Submitted Requests",
   "account.quotes.widget.view_all_quotes.link": "View all Quotes",
   "account.register.address.headding": "Address",
   "account.register.address.message": "To save time when placing an order, please provide your primary invoice or shipping address below. We will maintain this information so you won't have to enter it again.",
@@ -294,6 +292,14 @@
   "account.requisitions.requisitions.navtab.pending": "Pending",
   "account.requisitions.requisitions.navtab.rejected": "Rejected",
   "account.requisitions.requisitions.text": "This list shows all your order requests that need to be approved by an approver. You can also view all requests that have been approved or rejected.",
+  "account.requisitions.widget.approvals_title": "My Approvals",
+  "account.requisitions.widget.budget_title": "My Budgets",
+  "account.requisitions.widget.order_total": "Order Total",
+  "account.requisitions.widget.pending": "Pending",
+  "account.requisitions.widget.requisitions_title": "My Requisitions",
+  "account.requisitions.widget.view_all_approvals": "View All Approvals",
+  "account.requisitions.widget.view_all_budgets": "Manage Budgets",
+  "account.requisitions.widget.view_all_requisitions": "View All Requisitions",
   "account.salutation.dr.text": "Dr.",
   "account.salutation.miss.text": "Miss.",
   "account.salutation.mr.text": "Mr.",
