Added French and German localization

--- a/src/assets/i18n/de_DE.json
+++ b/src/assets/i18n/de_DE.json
@@ -263,7 +263,8 @@
   "account.profile.update_password.message": "Ihr Kennwort wurde aktualisiert.",
   "account.profile.update_profile.message": "Ihre Profilinformationen wurden aktualisiert.",
   "account.quotes.widget.my_quotes.heading": "Meine Preisangebote",
-  "account.quotes.widget.submitted.label": "Gesendet",
+  "account.quotes.widget.responded.label": "Beantwortete Preisangebote",
+  "account.quotes.widget.submitted.label": "Gesendete Anfragen",
   "account.quotes.widget.view_all_quotes.link": "Alle Preisangebote anzeigen",
   "account.register.address.headding": "Adresse",
   "account.register.address.message": "Um bei der Bestellung Zeit zu sparen, geben Sie unten Ihre Hauptadressen für Versand und Lieferung an. Die Informationen werden gespeichert, sodass Sie sie bei zukünftigen Bestellungen nicht mehr jedes Mal erneut eingeben müssen.",
@@ -291,6 +292,14 @@
   "account.requisitions.requisitions.navtab.pending": "Offen",
   "account.requisitions.requisitions.navtab.rejected": "Abgelehnt",
   "account.requisitions.requisitions.text": "Diese Liste zeigt Ihre gesamten Bestellanforderungen, die von einem Genehmiger genehmigt werden müssen. Zudem können Sie alle genehmigten oder abgelehnten Anforderungen einsehen.",
+  "account.requisitions.widget.approvals_title": "Meine Genehmigungen",
+  "account.requisitions.widget.budget_title": "Meine Budgets",
+  "account.requisitions.widget.order_total": "Gesamtsumme",
+  "account.requisitions.widget.pending": "Offen",
+  "account.requisitions.widget.requisitions_title": "Meine Bestellanforderungen",
+  "account.requisitions.widget.view_all_approvals": "Alle Genehmigungen ansehen",
+  "account.requisitions.widget.view_all_budgets": "Budgets verwalten",
+  "account.requisitions.widget.view_all_requisitions": "Alle Bestellanforderungen ansehen",
   "account.salutation.dr.text": "Dr.",
   "account.salutation.miss.text": "Frau",
   "account.salutation.mr.text": "Herr",
