--- a/src/assets/i18n/fr_FR.json
+++ b/src/assets/i18n/fr_FR.json
@@ -263,7 +263,8 @@
   "account.profile.update_password.message": "Votre mot de passe a été mis à jour.",
   "account.profile.update_profile.message": "Vos informations du profil ont été mises à jour.",
   "account.quotes.widget.my_quotes.heading": "Mes devis",
-  "account.quotes.widget.submitted.label": "Envoyé",
+  "account.quotes.widget.responded.label": "Devis répondus",
+  "account.quotes.widget.submitted.label": "Requêtes soumises",
   "account.quotes.widget.view_all_quotes.link": "Afficher tous les devis",
   "account.register.address.headding": "Adresse",
   "account.register.address.message": "Pour gagner du temps lors de la commande, veuillez indiquer votre adresse de facturation ou de livraison ci-dessous. Nous conserverons ces informations afin que vous n’ayez pas à les saisir à nouveau.",
@@ -291,6 +292,14 @@
   "account.requisitions.requisitions.navtab.pending": "En suspens",
   "account.requisitions.requisitions.navtab.rejected": "Rejetées",
   "account.requisitions.requisitions.text": "Cette liste répertorie toutes vos demandes d’achats qui doivent être approuvées par un approbateur. Vous pouvez également consulter toutes les demandes d’achats qui ont été approuvées ou rejetées.",
+  "account.requisitions.widget.approvals_title": "Mes approbations",
+  "account.requisitions.widget.budget_title": "Mes budgets",
+  "account.requisitions.widget.order_total": "Total de la commande",
+  "account.requisitions.widget.pending": "En suspens",
+  "account.requisitions.widget.requisitions_title": "Mes demandes",
+  "account.requisitions.widget.view_all_approvals": "Visualiser toutes les approbations",
+  "account.requisitions.widget.view_all_budgets": "Gérer les budgets",
+  "account.requisitions.widget.view_all_requisitions": "Visualiser toutes les demandes",
   "account.salutation.dr.text": "Dr",
   "account.salutation.miss.text": "Mlle",
   "account.salutation.mr.text": "M.",
